going to try a different approach on index2 and script2

--- a/index.html
+++ b/index.html
@@ -30,11 +30,33 @@
 
                 <button type="button" class="btn btn-primary btn-lg btn-block mt-2" id="srhBtn">Search</button>
 
-                <div class="list-group row" id="pastSearch"></div>
+                <div class="list-group row">
+
+                    <ul id="pastSearch">
+
+                    </ul>
+
+                </div>
 
             </div>
 
         </aside>
+
+        <div>
+
+            <h2 id="currentHeader"></h2>
+
+            <ul id="currentWeather"></ul>
+        
+        </div>
+
+        <div>
+
+            <h2>5 Day Forecast</h2>
+
+            <ul id="listGroup"></ul>
+
+        </div>
 
     </main>
 
