working on the script

--- a/index2.html
+++ b/index2.html
@@ -58,11 +58,13 @@
 
                 <h3 id="current-city-name"></h3>
 
-                <p></p>
+                <div id="current-weather">
+
+                </div>
 
             </article>
 
-            <div id="five-day-forcast">
+            <div id="five-day-forecast">
 
             </div>
 
