--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <!-- header section -->
     <header class="border border-white rounded border-4" style="background-color:rgb(46, 117, 248);">
 
         <h1 class="h1 text-center">Weather Dashboard</h1>
@@ -19,7 +19,7 @@
     </header>
 
     <main class="container-fluid">
-
+        <!-- search for city section -->
         <aside class="row" style="height: 100px">
 
             <div class="col-2">
@@ -41,7 +41,7 @@
             </div>
 
         </aside>
-
+        <!-- current weather section -->
         <section class="row d-flex" id="todayDiv">
 
             <div>
@@ -53,7 +53,7 @@
             </div>
 
         </section>
-
+        <!-- 5 day forecast section -->
         <section class="row text-center" id="dailySection">
 
             <div class="d-flex col-8 px-md-5" id="fiveDay">
